[package]
name = "path_tracer"
version = "0.1.0-dev"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
glam = { version = "0.30.4", features = ["mint"] }
imgui = { version = "0.12.0", features = ["docking"] }
imgui-wgpu = "0.25.0"
imgui-winit-support = "0.13.0"
pollster = "0.4.0"
rand = "0.9.1"
wgpu = "25.0.0"
winit = "0.30.11"

