[package]
name = "insploray"
version = "0.1.0-dev"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
exr = "1.73.0"
glam = { version = "0.30.4", features = ["mint"] }
pollster = "0.4.0"
rand = "0.9.1"

