[package]
name = "frontend"
version = "0.1.0-dev"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
insploray = { path = "../core-engine" }
bytemuck = { version = "1.23.1", features = ["derive"] }
imgui = { version = "0.12.0", features = ["docking"] }
imgui-wgpu = "0.25.0"
imgui-winit-support = "0.13.0"
pollster = "0.4.0"
rand = "0.9.1"
wgpu = "25.0.0"
winit = "0.30.11"
